show and change images

--- a/package.json
+++ b/package.json
@@ -2,21 +2,20 @@
     "name": "mon-projet",
     "version": "1.0.0",
     "scripts": {
-      "dev": "vite",
-      "compile-scss": "sass src/style.scss dist/css",
-      "watch-scss": "sass src/style.scss dist/css --watch"
+        "dev": "vite",
+        "compile-scss": "sass src/style.scss dist/css",
+        "watch-scss": "sass src/style.scss dist/css --watch"
     },
     "devDependencies": {
-      "sass": "^1.64.1",
-      "vite": "^2.0.5"
+        "sass": "^1.64.1",
+        "vite": "^2.0.5"
     },
     "dependencies": {
-      "gsap": "^3.7.1"
+        "gsap": "^3.12.2"
     },
-    "main": "main.js",
+    "main": "script/main.js",
     "keywords": [],
     "author": "",
     "license": "ISC",
     "description": ""
-  }
-  
+}
